--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Static Site Boilerplate</title>
+    <title>Time to decimal by Hatem Zehani</title>
     <meta name="description" content="" />
 </head>
 <body>
