font awesome & screenshot

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,15 @@
     <p class="result-2">00.00</p><p class="hours-p">hour(s)</p>
   </main>
   <footer>
-    <span>coded with <span class="icon-heart"></span> by <a href="https://github.com/ihatem" target="_blank">Hatem Zehani</span></a> <span class="seperator">|</span> <a href="https://github.com/ihatem/Time-to-decimal" target="_blank">Fork & Star @ <span class="icon-github"></span></a>
+
+      <span>
+        coded with <i class="fas fa-heart"></i> by <a href="https://github.com/ihatem" target="_blank">Hatem Zehani</a> 
+      </span>
+      <span class="seperator"> | </span>
+      <span>
+        <a href="https://github.com/ihatem/Time-to-decimal" target="_blank">Fork & Star @ <i class="fab fa-github"></i></a>
+      </span>
+
   </footer>
 </body>
 </html>
